# realtime-behavior-intelligence

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.py
docker/: compose.yaml
notebooks/: autoencoder_poc.ipynb
scripts/: dummy_data_generator.py  start_external_services.sh  start_influxdb.sh
shared_utils/: db_factory.py  kafka_util.py
src/: main.py
src/collector/: collector.py
src/db/: influxdb_service.py
src/intelligence/: autoencoder.py  data_preprocess.py  data_processor.py  pipeline.py
src/watcher/: watcher.py
tests/: check_anomaly.py  dummy_baseline_data_generator.py
